--- a/src/main/webapp/WEB-INF/templates/tutorial-servlet.xml
+++ b/src/main/webapp/WEB-INF/templates/tutorial-servlet.xml
@@ -1,25 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <beans xmlns="http://www.springframework.org/schema/beans"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-       xmlns:p="http://www.springframework.org/schema/p"
        xmlns:context="http://www.springframework.org/schema/context"
-       xsi:schemaLocation="http://www.springframework.org/schema/beans 
-       http://www.springframework.org/schema/beans/spring-beans-2.5.xsd
-       http://www.springframework.org/schema/context 
-       http://www.springframework.org/schema/context/spring-context-2.5.xsd">
 
-  <context:component-scan base-package="tutorial.spring25.ui.springmvc" />
+       xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-3.2.xsd
+          http://www.springframework.org/schema/context http://www.springframework.org/schema/context/spring-context-3.2.xsd
+">
 
-  <bean id="velocityConfig"
-        class="org.springframework.web.servlet.view.velocity.VelocityConfigurer">
-    <property name="resourceLoaderPath" value="/WEB-INF/templates/velocity/" />
-  </bean>
-
-  <bean id="viewResolver"
-        class="org.springframework.web.servlet.view.velocity.VelocityViewResolver">
-    <property name="cache" value="true" />
-    <property name="prefix" value="" />
-    <property name="suffix" value=".html" />
-  </bean>
-
+    
 </beans>
