--- a/src/main/webapp/WEB-INF/templates/tutorial-servlet.xml
+++ b/src/main/webapp/WEB-INF/templates/tutorial-servlet.xml
@@ -7,5 +7,5 @@
           http://www.springframework.org/schema/context http://www.springframework.org/schema/context/spring-context-3.2.xsd
 ">
 
-    
+    <context:component-scan base-package="tutorial.">
 </beans>
