--- a/src/main/webapp/WEB-INF/templates/tutorial-servlet.xml
+++ b/src/main/webapp/WEB-INF/templates/tutorial-servlet.xml
@@ -7,5 +7,21 @@
           http://www.springframework.org/schema/context http://www.springframework.org/schema/context/spring-context-3.2.xsd
 ">
 
-    <context:component-scan base-package="tutorial.">
+    <context:component-scan base-package="tutorial.spring.ui.springmvc" />
+    
+    <bean id="messageSource" 
+        class="org.springframework.context.support.ReloadableResourceBundleMessageSource"
+        p:basename="message" />
+    
+    <bean id="velocityConfig" 
+          class="org.springframework.web.servlet.view.velocity.VelocityConfigurer">
+        <property name="resourceLoaderPath" value="/WEB_INF/templates/velocity/"/>
+    </bean>
+    
+    <bean id="viewResolver" 
+          class="org.springframework.web.servlet.view.velocity.VelocityViewResolver">
+        <property name="cache" value="true"/>
+        <property name="prefix" value=""/>
+        <property name="suffix" value=".html" />
+    </bean>
 </beans>
